--- a/qrc.qrc
+++ b/qrc.qrc
@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/">
         <file>Irrorater.qss</file>
+        <file>angle_double_down.png</file>
+        <file>SpyBot.qss</file>
+        <file>bg.jpg</file>
+        <file>arrow_down_s.png</file>
+        <file>arrow_right_s.png</file>
     </qresource>
 </RCC>
